@@ -11,6 +11,7 @@ Cacti CHANGELOG
 -bug#0000721: SNMPv2 Query has issues with ifAlias & ifName when none present
 -bug#0000730: Non-standard port ignored
 -bug#0000739: "Unit value" parameter in template options ignored 
+-bug#0000741: Links get mismatched after using Zoom on graph 
 -bug: SQL Query in Graphs was not set write causing graph failures in preview mode and other modes.
 -bug: Setting a host template filter in devices, followed by moving off and then back on the page generated an error.
 -bug: PHP 5.1 snmpwalks utilize the bulk method by default.  Therefore, prefer them over the bulkwalk binary.
